5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4060/executions/1815_2563.log
== SUBMITION (2019-06-05 18:53:40) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
media = array(eval(input("informe as medias: ")))

# Verifica se o programa vai terminar
while (size(media) > vet[0]):
   # Zera contador de elementos pares
   n_tem_condicoes = 0

   # Conta quantidade de elementos pares
   for elemento in vet:
      if (elemento>=5)and(elemento<7):
         n_tem_condicoes = n_tem_condicoes + 1

   # No. de elementos sem condicoes
   print(n_tem_condicoes)
	
	# Leitura do proximo vetor
   media = array(eval(input("informe as medias: ")))

-- EXECUTION TIME:
1.1203
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2563/main.py", line 7, in <module>
    while (size(media) > vet[0]):
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 18:54:35) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
media = array(eval(input("informe as medias: ")))

# Verifica se o programa vai terminar
while (size(media) > media[0]):
   # Zera contador de elementos pares
   n_tem_condicoes = 0

   # Conta quantidade de elementos pares
   for elemento in vet:
      if (elemento>=5)and(elemento<7):
         n_tem_condicoes = n_tem_condicoes + 1

   # No. de elementos sem condicoes
   print(n_tem_condicoes)
	
	# Leitura do proximo vetor
   media = array(eval(input("informe as medias: ")))

-- EXECUTION TIME:
0.926706
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:

-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:

-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 18:55:31) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
media = array(eval(input("informe as medias: ")))

# Verifica se o programa vai terminar
while (size(media) > 1):
   # Zera contador de elementos pares
   n_tem_condicoes = 0

   # Conta quantidade de elementos pares
   for elemento in vet:
      if (elemento>=5)and(elemento<7):
         n_tem_condicoes = n_tem_condicoes + 1

   # No. de elementos sem condicoes
   print(n_tem_condicoes)
	
	# Leitura do proximo vetor
   media = array(eval(input("informe as medias: ")))

-- EXECUTION TIME:
1.17993
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2563/main.py", line 12, in <module>
    for elemento in vet:
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 18:55:47) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
media = array(eval(input("informe as medias: ")))

# Verifica se o programa vai terminar
while (size(media) > 1):
   # Zera contador de elementos pares
   n_tem_condicoes = 0

   # Conta quantidade de elementos pares
   for elemento in vet:
      if (elemento>=5)and(elemento<7):
         n_tem_condicoes = n_tem_condicoes + 1

   # No. de elementos sem condicoes
   print(n_tem_condicoes)
	
	# Leitura do proximo vetor
   media = array(eval(input("informe as medias: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 18:55:48) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
media = array(eval(input("informe as medias: ")))

# Verifica se o programa vai terminar
while (size(media) > 1):
   # Zera contador de elementos pares
   n_tem_condicoes = 0

   # Conta quantidade de elementos pares
   for elemento in vet:
      if (elemento>=5)and(elemento<7):
         n_tem_condicoes = n_tem_condicoes + 1

   # No. de elementos sem condicoes
   print(n_tem_condicoes)
	
	# Leitura do proximo vetor
   media = array(eval(input("informe as medias: ")))

-- EXECUTION TIME:
2.06212
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2563/main.py", line 12, in <module>
    for elemento in vet:
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 18:55:50) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
media = array(eval(input("informe as medias: ")))

# Verifica se o programa vai terminar
while (size(media) > 1):
   # Zera contador de elementos pares
   n_tem_condicoes = 0

   # Conta quantidade de elementos pares
   for elemento in vet:
      if (elemento>=5)and(elemento<7):
         n_tem_condicoes = n_tem_condicoes + 1

   # No. de elementos sem condicoes
   print(n_tem_condicoes)
	
	# Leitura do proximo vetor
   media = array(eval(input("informe as medias: ")))

-- EXECUTION TIME:
3.98225
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2563/main.py", line 12, in <module>
    for elemento in vet:
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 18:55:50) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
media = array(eval(input("informe as medias: ")))

# Verifica se o programa vai terminar
while (size(media) > 1):
   # Zera contador de elementos pares
   n_tem_condicoes = 0

   # Conta quantidade de elementos pares
   for elemento in vet:
      if (elemento>=5)and(elemento<7):
         n_tem_condicoes = n_tem_condicoes + 1

   # No. de elementos sem condicoes
   print(n_tem_condicoes)
	
	# Leitura do proximo vetor
   media = array(eval(input("informe as medias: ")))

-- EXECUTION TIME:
3.85011
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1815/2563/main.py", line 12, in <module>
    for elemento in vet:
NameError: name 'vet' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 18:56:33) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
media = array(eval(input("informe as medias: ")))

# Verifica se o programa vai terminar
while (size(media) > 1):
   # Zera contador de elementos pares
   n_tem_condicoes = 0

   # Conta quantidade de elementos pares
   for elemento in media:
      if (elemento>=5)and(elemento<7):
         n_tem_condicoes = n_tem_condicoes + 1

   # No. de elementos sem condicoes
   print(n_tem_condicoes)
	
	# Leitura do proximo vetor
   media = array(eval(input("informe as medias: ")))

-- EXECUTION TIME:
0.937493
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
6
0
3
1
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
11
4
1
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
5
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 15:03:43) 
-- CODE:
from numpy import*

# Leitura do primeiro vetor
media = array(eval(input("informe as medias: ")))

# Verifica se o programa vai terminar
while (size(media) > 1):
   # Zera contador de elementos pares
   n_tem_condicoes = 0

   # Conta quantidade de elementos pares
   for elemento in media:
      if (elemento>=5)and(elemento<7):
         n_tem_condicoes = n_tem_condicoes + 1

   # No. de elementos sem condicoes
   print(n_tem_condicoes)
	
	# Leitura do proximo vetor
   media = array(eval(input("informe as medias: ")))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
